# page_loader_cli

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
page_loader/: __init__.py  files.py  load.py  names.py
page_loader/scripts/: script_page_loader.py
tests/: test_load.py  test_page_loader.py
tests/fixtures/: original_page.html  ru-hexlet-io-courses.html
tests/fixtures/original_files/: application.css
tmp/: akkordam-ru-uroki-igry-na-gitare.html
tmp/akkordam-ru-uroki-igry-na-gitare_files/: akkordam-ru--s-t-1705-ui.js  akkordam-ru-_st-my.css  akkordam-ru-favicon-ico.html  akkordam-ru-images1-sidebar-menyu-boj-jpeg.html  akkordam-ru-images1-sidebar-menyu-perebory-jpeg.html  akkordam-ru-images1-sidebar-menyu-tehnika-jpeg.html  akkordam-ru-images1-sidebar-menyu-virtuozy-jpeg.html  akkordam-ru-images1-sidebar-raznoe-jpeg.html  akkordam-ru-rocketme_pre_v_1-1.js
