[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Dmitrii Morozov <33morozov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = { git = "https://github.com/psf/requests.git"}
requests-mock = { git = "https://github.com/jamielennox/requests-mock"}

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
